--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ person
           <p class ="text">
             <table>
               <tr>
-                <th><img src ="./img/IMG_9296.PNG" alt="face">
+                <th><img src ="IMG_9296.PNG" alt="face">
                 </th>
                 <td>
             初めまして。<br>
