--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  <link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
  <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet">
 
- <link rel="shortcut icon" href = "./img/IMG_9157.PNG">
+ <link rel="shortcut icon" href = "file:///Users/minatsukakii/Library/Mobile%20Documents/com~apple~CloudDocs/IMG_9157.PNG">
 
 <link href ="./cssstyle.css" media="all" rel="stylesheet" type="text/css" />
 <link href="./carousel.css" media ="all" rel="stylesheet" type="text/css" />
@@ -73,7 +73,7 @@ person
           <p class ="text">
             <table>
               <tr>
-                <th><img src ="IMG_9296.PNG" alt="face">
+                <th><img src ="https://github.com/mmnt0211/mmntprofile/blob/master/IMG_9296.PNG?raw=true" alt="face">
                 </th>
                 <td>
             初めまして。<br>
@@ -105,11 +105,11 @@ person
   <div class="slide">
 	<ul class="slider">
 	    <li><figure>
-        <img src="./img/IMG_9439.jpeg" style="display: block; margin: auto;" alt="カフェ"><figcaption class="setumei">休日はカフェでゆっくりした時間を過ごすのが好きです。<br>最近は古家をリノベーションした古民家風カフェにハマっていて、<br>古木材やほんのりと漂うお線香の匂いが、まるでおばあちゃんの家に寄っているような安堵感に包まれます。<br>そこで頂ける手作りのデザートとコーヒーは心もホットして癒してくれます。:-)</figcaption></figure></li>
-	    <li><img src="./img/budou.jpg" style="display: block; margin: auto;" alt="ブドウ"><figcaption class="setumei">毎年、季節の旬な果物を狩りに行きます。葡萄の旬は８月から１０月上旬にかけてなので、<br>１０月下旬に行った私たちはシャインマスカットは惜しくも食べれなかったですが、巨峰はまだ実っており美味しく頂く事ができました。<br>来年はシャインマスカットを狩りに再チャレンジしたいです。;-)</figcaption></li>
-	    <li><img src="./img/kimetu2%20(1).jpg" style="display: block; margin: auto;" alt="鬼滅"><figcaption class="setumei">社会現象にもなった鬼滅の刀。主人公が困難に立ち向かって闘うアニメや漫画が好きなので鬼滅の刀にもどっぷりはまってしまい全巻買ってしまいました。(笑)
+        <img src="https://github.com/mmnt0211/mmntprofile/blob/master/IMG_9439.jpeg?raw=true" style="display: block; margin: auto;" alt="カフェ"><figcaption class="setumei">休日はカフェでゆっくりした時間を過ごすのが好きです。<br>最近は古家をリノベーションした古民家風カフェにハマっていて、<br>古木材やほんのりと漂うお線香の匂いが、まるでおばあちゃんの家に寄っているような安堵感に包まれます。<br>そこで頂ける手作りのデザートとコーヒーは心もホットして癒してくれます。:-)</figcaption></figure></li>
+	    <li><img src="https://github.com/mmnt0211/mmntprofile/blob/master/budou.jpg?raw=true" style="display: block; margin: auto;" alt="ブドウ"><figcaption class="setumei">毎年、季節の旬な果物を狩りに行きます。葡萄の旬は８月から１０月上旬にかけてなので、<br>１０月下旬に行った私たちはシャインマスカットは惜しくも食べれなかったですが、巨峰はまだ実っており美味しく頂く事ができました。<br>来年はシャインマスカットを狩りに再チャレンジしたいです。;-)</figcaption></li>
+	    <li><img src="https://github.com/mmnt0211/mmntprofile/blob/master/kimetu2%20(1).jpg?raw=true" style="display: block; margin: auto;" alt="鬼滅"><figcaption class="setumei">社会現象にもなった鬼滅の刀。主人公が困難に立ち向かって闘うアニメや漫画が好きなので鬼滅の刀にもどっぷりはまってしまい全巻買ってしまいました。(笑)
       </figcaption></li>
-      <li><img src="./img/IMG_9626%20(1).jpg"style="display: block; margin: auto;"　alt="岐阜"><figcaption class="setumei">旅行が好きで、今年の１１月に岐阜県の世界遺産である白川郷に行ってきました。<br>江戸時代から変わりのない合掌造りという建物が並んでおり、日本昔話に出てくるような趣のある街並みでした。<br>
+      <li><img src="https://github.com/mmnt0211/mmntprofile/blob/master/IMG_9626%20(1).jpg?raw=true"style="display: block; margin: auto;"　alt="岐阜"><figcaption class="setumei">旅行が好きで、今年の１１月に岐阜県の世界遺産である白川郷に行ってきました。<br>江戸時代から変わりのない合掌造りという建物が並んでおり、日本昔話に出てくるような趣のある街並みでした。<br>
       城山展望台からみると白川郷の全貌でき、日本の原風景に感動しました。</figcaption></figure></li>
 	</ul>
 </div>
