--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
   <body>
     <div id ="wrapper">
       <div class = "toppage">
+        <style>div{
+          background-image: url("https://github.com/mmnt0211/mmntprofile/blob/master/8C978948-DC5E-4EE7-B51E-F0787C2E7C40.jpg?raw=true");
+          background-repeat:no-repeat;
+          background-size: 100% auto;
+          }</style>
     <header id = "header">
     <h1 class ="lego">
     <span class ="logo-title">Minatsu Kakii's portfolio</span>
