--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
   <body>
     <div id ="wrapper">
       <div class = "toppage">
-        <style>div{
+    <!-->    <style>div{
           background-image: url("https://github.com/mmnt0211/mmntprofile/blob/master/8C978948-DC5E-4EE7-B51E-F0787C2E7C40.jpg?raw=true");
           background-repeat:no-repeat;
           background-size: 100% auto;
-          }</style>
+        }</style><-->
     <header id = "header">
     <h1 class ="lego">
     <span class ="logo-title">Minatsu Kakii's portfolio</span>
@@ -262,18 +262,19 @@ emoji_objects</span>SKILL<br><div class="biginer">（実務未経験）</div></s
                     <span class ="section-title-css"><span class="material-icons" style="font-size:50px;">
                 local_post_office
                 </span>CONTACT</span></i></h2>
+
                     <div class ="section-desc"></div>
                   </div>
-                  <div class ="card-wrapper my-gallery">
+                  <div class ="card-wrappermy-gallery">
                     <figure class="card">
 
-!!!  <img class ="card-image" src ="!!" alt""/>
+!!!  <img class ="card-image" src ="" alt""/>
 
 <figcaption class ="card-capition">
   <p class="card-capition-title">ポートフォリオ</p>
   <p class="card-capition-info">自分自身のポートフォリオです。</p>
   <p class="card-capition-info">HTML/CSS/JQuery</p>
-!!!  <p class ="card-capition-url"><a class ="url-link" href ="!!!" target="_black">git hub</a></p>
+!!!  <p class ="card-capition-url"><a class ="url-link" href ="" target="_black">git hub</a></p>
 </figcaption>
 </figure>
 </div>
