--- a/index.html
+++ b/index.html
@@ -82,10 +82,9 @@ person
                 </th>
                 <td>
             初めまして。<br>
-            平成１２年生まれの２０歳エンジニアの垣井美夏と申します。
-
-            <br>前職ではチョコレートの販売をしておりました。その間WEBデザインの存在を知り、自身でサイトを作ってみたい！WEBに携わりたいと、専門スクールの入校を決意。始めてみると、コードやプログラミングの楽しさとやりがいに気づきました。
-            今も尚、様々な言語をプロゲートで勉強中です。</td>
+            平成１２年生まれの２０歳垣井美夏と申します。
+            <br>前々職ではチョコレートの販売をしておりました。その間WEBデザインの存在を知り、自身でサイトを作ってみたい！WEBに携わりたいと！と思い独学で勉強することを決意。始めてみると、コーディングやプログラミングの楽しさとやりがいに気づきました。
+            今も尚、エンジニアを目指し様々な言語をプロゲートで勉強中です。</td>
           </table>
 
           </p>
@@ -112,7 +111,7 @@ person
 	    <li><figure>
         <img src="https://github.com/mmnt0211/mmntprofile/blob/master/IMG_9439.jpeg?raw=true" style="display: block; margin: auto;" alt="カフェ"><figcaption class="setumei">休日はカフェでゆっくりした時間を過ごすのが好きです。<br>最近は古家をリノベーションした古民家風カフェにハマっていて、<br>古木材やほんのりと漂うお線香の匂いが、まるでおばあちゃんの家に寄っているような安堵感に包まれます。<br>そこで頂ける手作りのデザートとコーヒーは心もホットして癒してくれます。:-)</figcaption></figure></li>
 	    <li><img src="https://github.com/mmnt0211/mmntprofile/blob/master/budou.jpg?raw=true" style="display: block; margin: auto;" alt="ブドウ"><figcaption class="setumei">毎年、季節の旬な果物を狩りに行きます。葡萄の旬は８月から１０月上旬にかけてなので、<br>１０月下旬に行った私たちはシャインマスカットは惜しくも食べれなかったですが、巨峰はまだ実っており美味しく頂く事ができました。<br>来年はシャインマスカットを狩りに再チャレンジしたいです。;-)</figcaption></li>
-	    <li><img src="https://github.com/mmnt0211/mmntprofile/blob/master/kimetu2%20(1).jpg?raw=true" style="display: block; margin: auto;" alt="鬼滅"><figcaption class="setumei">社会現象にもなった鬼滅の刀。主人公が困難に立ち向かって闘うアニメや漫画が好きなので鬼滅の刀にもどっぷりはまってしまい全巻買ってしまいました。(笑)
+	    <li><img src="https://github.com/mmnt0211/mmntprofile/blob/master/kimetu2%20(1).jpg?raw=true" style="display: block; margin: auto;" alt="鬼滅"><figcaption class="setumei">社会現象にもなった鬼滅の刀。<br>主人公が困難に立ち向かって闘うアニメや漫画が好きなので鬼滅の刀にもどっぷりはまってしまい全巻買ってしまいました。(笑)
       </figcaption></li>
       <li><img src="https://github.com/mmnt0211/mmntprofile/blob/master/IMG_9626%20(1).jpg?raw=true"style="display: block; margin: auto;"　alt="岐阜"><figcaption class="setumei">旅行が好きで、今年の１１月に岐阜県の世界遺産である白川郷に行ってきました。<br>江戸時代から変わりのない合掌造りという建物が並んでおり、日本昔話に出てくるような趣のある街並みでした。<br>
       城山展望台からみると白川郷の全貌でき、日本の原風景に感動しました。</figcaption></figure></li>
@@ -181,12 +180,12 @@ emoji_objects</span>SKILL<br><div class="biginer">（実務未経験）</div></s
 <div class = "card">
 <div class = "skill-desc">
   <h3 class = "skill-desc-title"><i class="fas-fa-desktop"></i>フロントエンド</h3>
-  <p>今回のポートフォリオはJavascriptを使用しています。</p>
+  <p></p>
   <table class="table table-borderless">
                  <thead>
                    <tr>
                      <th scope="col">技術</th>
-                     <th scope="col">経験年数</th>
+                     <th scope="col">勉強年数</th>
                      <th scope="col">スキル</th>
                    </tr>
                  </thead>
@@ -207,14 +206,14 @@ emoji_objects</span>SKILL<br><div class="biginer">（実務未経験）</div></s
           </div>
 
           <DIV CLASS ="card">
-            <div class = "sklill-desc">
-              <h3 class="skill-desc-title"><i class="fas fa-desctop"></i>バックエンド</h3>
-    ！！
+            <div class = "skill-desc">
+              <h3 class="skill-desc-title"><i class="fas-fa-desktop"></i>バックエンド</h3>
+
                    <table class ="table table-borderless">
                      <thead>
                        <tr>
                          <th scope="col">技術</th>
-                      <th scope="col">経験年数</th>
+                      <th scope="col">勉強年数</th>
                       <th scope="col">スキル</th>
                     </tr>
                   </thead>
@@ -238,7 +237,7 @@ emoji_objects</span>SKILL<br><div class="biginer">（実務未経験）</div></s
                   <thead>
                     <tr>
                       <th scope="col">技術</th>
-                      <th scope="col">経験年数</th>
+                      <th scope="col">勉強年数</th>
                       <th scope="col">スキル</th>
                     </tr>
                   </thead>
